...
class ProfileViewController: UIViewController, UINavigationControllerDelegate, UIGestureRecognizerDelegate {
	
	@IBOutlet weak var profilePictureView: UIImageView?
	@IBOutlet weak var editButton: ThemeDependentUIButton?
	@IBOutlet weak var saveGCDButton: ThemeDependentUIButton?
	@IBOutlet weak var initialsLabel: ThemeDependentUILabel?
	@IBOutlet weak var descriptionTextView: UITextView?
	@IBOutlet weak var nameTextField: UITextField?
	@IBOutlet weak var activityIndicator: UIActivityIndicatorView?
	
	private var isEditingProfile = false
	private var gcdManager = GCDManager()
	
	private var profilePicture: UIImage? {
...
